--- a/frontend/app/works/tabs.html
+++ b/frontend/app/works/tabs.html
@@ -1,4 +1,4 @@
-<content-header name="Works" ></content-header>
+<content-header name="Verifications Works" ></content-header>
 
 <section class="content">
     <div class="nav-tabs-custom" ng-controller="WorkCtrl as wCtrl">
